--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
                 <ul class="nav-links">
                     <li><a href="{{ '/' | relative_url }}">Home</a></li>
                     <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
-                    <li><a href="{{ '/work/' | relative_url }}">Work</a></li>
+                    <li><a href="{{ '/background/' | relative_url }}">Background</a></li>
                     <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
                 </ul>
             </nav>
